replaced error-prone single-string exec(...)